[gd_scene load_steps=6 format=3 uid="uid://cq54mhhpfawor"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_jivql"]
[ext_resource type="PackedScene" uid="uid://c4votcijhmgs3" path="res://scenes/popups/app_scale_popup.tscn" id="2_c6cku"]
[ext_resource type="PackedScene" uid="uid://6i5h1tdoctk6" path="res://scenes/popups/controls_popup.tscn" id="3_vg75b"]
[ext_resource type="PackedScene" uid="uid://686ef6jcvfk3" path="res://scenes/popups/resize_canvas_popup.tscn" id="4_r0twh"]
[ext_resource type="PackedScene" uid="uid://be0bda4j678f" path="res://scenes/popups/about_popup.tscn" id="6_ubg70"]

[node name="MainMenu" type="MenuBar"]
script = ExtResource("1_jivql")

[node name="File" type="PopupMenu" parent="."]
transparent_bg = true
transparent = true
item_count = 10
item_0/text = "New"
item_0/id = 1
item_1/text = "Open..."
item_1/id = 2
item_2/id = 100
item_2/separator = true
item_3/text = "Save"
item_3/id = 3
item_4/text = "Save As..."
item_4/id = 4
item_5/id = 101
item_5/separator = true
item_6/text = "Export"
item_6/id = 5
item_7/text = "Export As..."
item_7/id = 6
item_8/id = 102
item_8/separator = true
item_9/text = "Close"
item_9/id = 7

[node name="View" type="PopupMenu" parent="."]
transparent_bg = true
transparent = true
item_count = 1
item_0/text = "App Scale..."
item_0/id = 1

[node name="Image" type="PopupMenu" parent="."]
auto_translate_mode = 1
transparent_bg = true
transparent = true
item_count = 1
item_0/text = "Resize Canvas..."
item_0/id = 1

[node name="Info" type="PopupMenu" parent="."]
transparent_bg = true
transparent = true
item_count = 2
item_0/text = "Controls..."
item_0/id = 1
item_1/text = "About..."
item_1/id = 2

[node name="AppScalePopup" parent="." instance=ExtResource("2_c6cku")]
visible = false

[node name="ResizeCanvasPopup" parent="." instance=ExtResource("4_r0twh")]
auto_translate_mode = 1
visible = false

[node name="ControlsPopup" parent="." instance=ExtResource("3_vg75b")]
visible = false

[node name="AboutPopup" parent="." instance=ExtResource("6_ubg70")]
visible = false

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open"
position = Vector2i(0, 36)
size = Vector2i(362, 175)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.ihp, *.png, *.jpg, *.jpeg ; All supported formats (*.ihp, *.png, *.jpg, *.jpeg)", "*.ihp ; I Heart Pixels image (*.ihp)", "*.png ; PNG (*.png)", "*.jpg, *.jpeg ; JPG (*.jpg, *.jpeg)")
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save"
position = Vector2i(0, 36)
size = Vector2i(400, 175)
ok_button_text = "Save"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.ihp ; I Heart Pixels image (*.ihp)", "*.png ; PNG (*.png)")
use_native_dialog = true

[node name="ExportDialog" type="FileDialog" parent="."]
title = "Export"
position = Vector2i(0, 36)
size = Vector2i(400, 175)
ok_button_text = "Save"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.png ; PNG (*.png)")
use_native_dialog = true

[connection signal="index_pressed" from="File" to="." method="_on_file_index_pressed"]
[connection signal="index_pressed" from="View" to="." method="_on_view_index_pressed"]
[connection signal="index_pressed" from="Image" to="." method="_on_image_index_pressed"]
[connection signal="index_pressed" from="Info" to="." method="_on_info_index_pressed"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="ExportDialog" to="." method="export_"]
